objects/TILBP__TI_Assessment_Attempt__c.object
<CustomObject>
    <fields>
        <fullName>TILBP__Company__c</fullName>
        <label>Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__Course__c</fullName>
        <label>Course</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__CreatedAt__c</fullName>
        <label>Created At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TILBP__Grade__c</fullName>
        <label>Grade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TILBP__Passed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Passed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TILBP__QuestionsWithChoicesCount__c</fullName>
        <label>Questions With Choices Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TILBP__SFContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>TI Assessment Attempts</relationshipLabel>
        <relationshipName>TI_Assessment_Attempts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TILBP__SFContent__c</fullName>
        <label>Course</label>
        <referenceTo>TILBP__TI_Content__c</referenceTo>
        <relationshipLabel>TI Assessment Attempts</relationshipLabel>
        <relationshipName>TI_Assessment_Attempts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TILBP__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__TIID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>TI ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TILBP__TI_ID__c</fullName>
        <label>TI ID (DEPRECATED)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__TopicTitle__c</fullName>
        <label>Topic Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__TopicType__c</fullName>
        <label>Topic Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__Topic__c</fullName>
        <label>Topic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__UnansweredQuestionsCount__c</fullName>
        <label>Unanswered Questions Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TILBP__UpdatedAt__c</fullName>
        <label>Updated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TILBP__User__c</fullName>
        <label>User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__answeredQuestionsCount__c</fullName>
        <label>Answered Questions Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TILBP__correctQuestionsCount__c</fullName>
        <label>Correct Questions Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TILBP__timeElapsedInSeconds__c</fullName>
        <label>Time Elapsed In Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>TI Assessment Attempt</label>
    <listViews>
        <fullName>TILBP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TIAA-{0000000}</displayFormat>
        <label>TI Assessment Attempt ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TI Assessment Attempts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>